<resources>
    <string name="app_name">PracticeApp</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="add_new_data">ADD</string>
    <string name="home">HOME</string>
    <string name="profile">PROFILE</string>
    <string name="settings">SETTINGS</string>

    <string name="patient_id">Patient ID</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_PIN">Patient PIN</string>

    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>


    <string name="back">back</string>
    <string name="upload_data">Blood Pressure Measurement</string>
    <string name="save_BP">Save + Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sys">SYS</string>
    <string name="mmhg">mmHg</string>
    <string name="dia">DIA</string>
    <string name="hr">HR</string>
    <string name="bpm">BPM</string>
    <string name="month">Month</string>
    <string name="english">English</string>
    <string name="hausa">Hausa</string>
    <string name="language_label">Language</string>
    <string name="expandable_instructions">- No smoking, caffeine, alcohol, food, or exercise 30 min before BP measurement \n\n- Empty the bladder before BP measurement \n\n- Remove clothing covering the location of BP measurement \n\n- Check BP on the arm advised by the sit staff \n\n- Rest 5min before measurement \n\n- Do not speak during the measurement</string>
    <string name="expandable_instructions_bold">Do not skip home BP even if some of these are not possible</string>
    <string name="bp_instruction_heading">Procedure for Home BP Measurements</string>
    <string name="warning_heading">Warning Symptoms</string>
    <string name="warning_symptoms">- Chest pain\n\n
        - Shortness of breath\n\n- Severe headache\n\n
        - Any changes in vision or light sensitivity\n\n
        - Pain in your upper belly\n\n
        - Nausea and vomiting\n\n
        - Weakness on one side\n\n</string>
    <string name="call_warning">If you have persistently abnormal blood pressure and/or symptoms above, please call the doctor or nurse</string>
    <string name="call_doctor">CALL DOCTOR/NURSE</string>
    <string name="q15mrecheck">Recheck within 15 minutes</string>
    <string name="hear_feedback">HEAR INFO</string>
    <string name="low">LOW</string>
    <string name="recheck_4hr">Recheck within 4 hours</string>
    <string name="name">Name: </string>
    <string name="userinfo">INFORMATION</string>
    <string name="settings_patient_name">Name: </string>
    <string name="settings_patient_phone">Phone #: </string>
    <string name="settings_phys_name">Physician: Dr. </string>
    <string name="settings_phys_phone">Phone Number: </string>
    <string name="change_userinfo">change information</string>
    <string name="change_phys">change physician</string>
    <string name="change_physphone">change physician phone</string>
    <string name="signout">sign out</string>
    <string name="empty_not_saved">Empty. Entry was not saved.</string>
    <string name="q4recheck">Recheck within 4 hours</string>
    <string name="hear_audio">HEAR INFO</string>
    <string name="hear_info">HEAR INFO</string>
    <string name="highlabel">HIGH</string>
    <string name="low_bp_warning_icon">Low BP warning icon</string>
    <string name="normallabel">NORMAL</string>
    <string name="normal_bp_icon">Normal BP Icon</string>
    <string name="q1d_recheck">Recheck within 1 day</string>
    <string name="critically_highlabel">CRITICALLY HIGH</string>
    <string name="critically_high_icon">Critically high icon</string>
    <string name="sms_send_empty" translatable="false">"Physician Phone number is empty"</string>
    <string name="audio_feedback_for_very_high_bp_measurement">Audio Feedback for Very High BP Measurement</string>
    <string-array name="languages">
        <item>English</item>
        <item>Hausa</item>
        <item>Yoruba</item>
        <item>Igbo</item>
    </string-array>
    <string name="PracticeApp" translatable="false">Practice App</string>
</resources>