<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".addnewfragments.LowFeedbackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:background="@color/white">
        <ImageButton
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_volume"
            android:background="@color/white"
            android:layout_marginStart="20dp"
            android:id="@+id/sound_button"
            android:contentDescription="Audio Feedback Button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hear_feedback"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_gravity="center"
            app:drawableLeftCompat="@drawable/ic_arrow_left"
            app:drawableTint="@color/grey" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="5dp"
        android:id="@+id/lowwarning">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="20dp"
            android:background="@color/red">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_warning_amber"
                android:layout_gravity="center"
                android:contentDescription="@string/low_bp_warning_icon" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="30dp"
        android:id="@+id/lowinstructions">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recheck_4hr"
            android:textSize="28sp"
            android:padding="5dp"
            android:background="@color/grey"
            android:textAlignment="center"
            android:textStyle="bold"
            android:drawablePadding="5dp"
            app:drawableLeftCompat="@drawable/ic_redo"
            app:drawableTint="@color/black" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/backButtonLow"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/cadetblue"
        android:text="@string/save_BP"
        android:textSize="25sp"
        app:cornerRadius="20dp"
        app:drawableTint="@color/white"/>

</LinearLayout>