<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".AddNewFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/grey"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="10dp"
                android:text="@string/upload_data"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:drawableLeftCompat="@drawable/ic_upload"
                app:drawableTint="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="80dp"
                        android:text="@string/sys"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mmhg" />
                </LinearLayout>

                <EditText
                    android:id="@+id/bpsystolic"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:fontFamily="@font/rationale_regular"
                    android:inputType="number"
                    android:letterSpacing="0.1"
                    android:padding="10dp"
                    android:textAlignment="textEnd"
                    android:textSize="120dp"
                    android:maxLength="3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="100dp"
                        android:text="@string/dia"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mmhg" />
                </LinearLayout>

                <EditText
                    android:id="@+id/bpdiastolic"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:fontFamily="@font/rationale_regular"
                    android:inputType="number"
                    android:letterSpacing="0.1"
                    android:padding="10dp"
                    android:textAlignment="textEnd"
                    android:textSize="120dp"
                    android:maxLength="3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="100dp"
                        android:text="@string/hr"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bpm" />
                </LinearLayout>

                <EditText
                    android:id="@+id/heartrate"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:fontFamily="@font/rationale_regular"
                    android:inputType="number"
                    android:letterSpacing="0.1"
                    android:padding="10dp"
                    android:textAlignment="textEnd"
                    android:textSize="120dp"
                    android:maxLength="3"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/addnewButton"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/lavender"
        android:text="@string/add_new_data"
        android:textSize="25sp"
        app:cornerRadius="20dp"
        app:drawableLeftCompat="@drawable/ic_add_circle"
        app:drawableTint="@color/white"/>

</LinearLayout>