<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:background="@drawable/login_background2"
    android:focusableInTouchMode="true">

    <!-- TODO: Update blank fragment layout -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsheading"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="20dp"
        android:elevation="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lavender"
            android:padding="10dp"
            android:text="@string/settings"
            android:fontFamily="@font/gemunulibre_semibold"
            android:textSize="50sp"
            android:gravity="center"
            android:textColor="@color/white"/>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/languagelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:layout_below="@id/settingsheading"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/auto_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/language_label"
            android:textSize="25sp"
            android:inputType="none"
            android:background="@color/lightgrey"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userinfo"
        android:layout_marginTop="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/languagelist"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white">
                <TextView
                    android:id="@+id/settingname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="22sp"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/patientname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:padding="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white">
                <TextView
                    android:id="@+id/settingphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_patient_phone"
                    android:textSize="22sp"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/patientphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:padding="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white">
                <TextView
                    android:id="@+id/settingphysname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_phys_name"
                    android:textSize="22sp"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/physname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:padding="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white">
                <TextView
                    android:id="@+id/settingphysphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_phys_phone"
                    android:textSize="22sp"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/physphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:padding="10dp"/>
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonchangeinfo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="@color/cadetblue"
        android:text="@string/change_userinfo"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/userinfo"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:drawableLeftCompat="@drawable/ic_person"
        app:layout_constraintTop_toBottomOf="@id/userinfo"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/buttonsignout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cadetblue"
        android:text="@string/signout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/buttonchangeinfo"
        android:padding="10dp"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:drawableLeftCompat="@drawable/ic_lock"
        android:drawableTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomNavigationView"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_background"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:elevation="2dp"
        app:menu="@menu/bottom_menu"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"/>

</RelativeLayout>